--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html prefix="og: http://ogp.me/ns#" xml:lang="en-US" xmlns="http://www.w3.org/1999/xhtml" >
        <head class="at-element-marker">
        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-       <link rel="shortcut icon" href="http://ridepromo.net/images/favicon.ico" type="image/x-icon; charset=binary">
-       <link rel="icon" href="http://ridepromo.net/images/favicon.ico" type="image/x-icon; charset=binary">
+       <link rel="shortcut icon" href="http://postmates.promo/images/favicon.ico" type="image/x-icon; charset=binary">
+       <link rel="icon" href="http://postmates.promo/images/favicon.ico" type="image/x-icon; charset=binary">
        <link rel="stylesheet" type="text/css" href="css/template.css" media="all">
        <link rel="stylesheet" type="text/css" href="css/lyft.css" media="all">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
   			$temp.remove();
 		  }
 	   </script>
-	   <!-- Hotjar Tracking Code for http://ridepromo.net/ -->
+	   <!-- Hotjar Tracking Code for http://postmates.promo/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -49,7 +49,7 @@
                 <h1 class="align-center" style="color:#fff">Free Lyft promo code for your first ride</h1>
               </div>
               <div id="content-c321918" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a>
                   <div style="color: #FFFFFF; font-size: 18px; margin-top:15px">Or enter promo code <b>LYFTDOJO</b> into your Lyft app</div>
                 </div>
               </div>
@@ -68,7 +68,7 @@
                 <div class="row flex skin-mb-s">
                   <div class="col col-sm-4">
                     <div id="content-c321934" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Lyft Standard" title="Lyft Standard"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Lyft Standard" title="Lyft Standard"></a> </div>
                     </div>
                     <div id="content-c321935" class="csc-default">
                       <h4 class="align-center bold">Lyft</h4>
@@ -77,7 +77,7 @@
                   </div>
                   <div class="col col-sm-4">
                     <div id="content-c321932" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/line-icon.png" data-in-lg-src="images/line-icon.png" data-in-sm-src="images/line-icon.png" data-in-md-src="images/line-icon.png" data-in-xs-src="images/line-icon.png" data-in-xxs-src="images/line-icon.png" data-in-xl-src="images/line-icon.png" class="rimg" alt="Lyft Line" title="Lyft Line"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/line-icon.png" data-in-lg-src="images/line-icon.png" data-in-sm-src="images/line-icon.png" data-in-md-src="images/line-icon.png" data-in-xs-src="images/line-icon.png" data-in-xxs-src="images/line-icon.png" data-in-xl-src="images/line-icon.png" class="rimg" alt="Lyft Line" title="Lyft Line"></a> </div>
                     </div>
                     <div id="content-c321937" class="csc-default">
                       <h4 class="align-center bold">Lyft Line</h4>
@@ -86,7 +86,7 @@
                   </div>
                   <div class="col col-sm-4">
                     <div id="content-c321933" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/plus-icon.png" data-in-lg-src="images/plus-icon.png" data-in-sm-src="images/plus-icon.png" data-in-md-src="images/plus-icon.png" data-in-xs-src="images/plus-icon.png" data-in-xxs-src="images/plus-icon.png" data-in-xl-src="images/plus-icon.png" class="rimg" alt="Lyft Plus" title="Lyft Plus"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/plus-icon.png" data-in-lg-src="images/plus-icon.png" data-in-sm-src="images/plus-icon.png" data-in-md-src="images/plus-icon.png" data-in-xs-src="images/plus-icon.png" data-in-xxs-src="images/plus-icon.png" data-in-xl-src="images/plus-icon.png" class="rimg" alt="Lyft Plus" title="Lyft Plus"></a> </div>
                     </div>
                     <div id="content-c321938" class="csc-default">
                       <h4 class="align-center bold">Lyft Plus</h4>
@@ -96,7 +96,7 @@
                 </div>
               </div>
               <div id="content-c321919" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
                 </div>
               </div>
               <div id="content-c325519" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://ridepromo.net')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321917" class="csc-default skin-padding-xl">
-                <p class="align-center">© 2018 All Right Reserved. This website not officially affiliated with Lyft in any way. </p>
+                <p class="align-center">© 2020 All Right Reserved. This website not officially affiliated with Postmates in any way. </p>
               </div>
             </div>
           </div>
