--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <link rel="stylesheet" type="text/css" href="css/template.css" media="all">
        <link rel="stylesheet" type="text/css" href="css/lyft.css" media="all">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-       <title>Enter LYFTDOJO - Lyft Promo Code - Get $50 free towards your first ride</title>
+       <title>Enter LYFTDOJO - Lyft Promo Code - Get $10 free towards your first ride</title>
        <meta name="description" content="Lyft promo codes worth $50 off your first rides for free">
        <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1.0, user-scalable=0, minimal-ui">
        <meta name="theme-color" content="#352384" />
@@ -46,11 +46,11 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321913" class="csc-default skin-padding-m">
-                <h1 class="align-center" style="color:#fff">Free Lyft promo code for your first ride</h1>
+                <h1 class="align-center" style="color:#fff">Free Postmates promo code for your first delivery</h1>
               </div>
               <div id="content-c321918" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a>
-                  <div style="color: #FFFFFF; font-size: 18px; margin-top:15px">Or enter promo code <b>LYFTDOJO</b> into your Lyft app</div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $10 POSTMATES CREDIT</a>
+                  <div style="color: #FFFFFF; font-size: 18px; margin-top:15px">Or enter promo code <b>XXXXXXXX</b> into your Postmates app</div>
                 </div>
               </div>
             </div>
