--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1 class="align-center" style="color:#fff">Free Postmates promo code for your first delivery</h1>
               </div>
               <div id="content-c321918" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $10 POSTMATES CREDIT</a>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="teal-button">APPLY $10 POSTMATES CREDIT</a>
                   <div style="color: #FFFFFF; font-size: 18px; margin-top:15px">Or enter promo code <b>XXXXXXXX</b> into your Postmates app</div>
                 </div>
               </div>
