--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <link rel="shortcut icon" href="http://postmates.promo/images/favicon.ico" type="image/x-icon; charset=binary">
        <link rel="icon" href="http://postmates.promo/images/favicon.ico" type="image/x-icon; charset=binary">
        <link rel="stylesheet" type="text/css" href="css/template.css" media="all">
-       <link rel="stylesheet" type="text/css" href="css/lyft.css" media="all">
+       <link rel="stylesheet" type="text/css" href="css/postmates.css" media="all">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
        <title>Enter LYFTDOJO - Lyft Promo Code - Get $10 free towards your first ride</title>
        <meta name="description" content="Lyft promo codes worth $50 off your first rides for free">
