--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
        <link rel="stylesheet" type="text/css" href="css/template.css" media="all">
        <link rel="stylesheet" type="text/css" href="css/postmates.css" media="all">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-       <title>Enter LYFTDOJO - Lyft Promo Code - Get $10 free towards your first ride</title>
-       <meta name="description" content="Lyft promo codes worth $50 off your first rides for free">
+       <title>Enter XXXXXXXX - Postmates Promo Code - Get $10 free towards your first food delivery</title>
+       <meta name="description" content="Postmates promo codes worth $10 off your first food delivery">
        <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1.0, user-scalable=0, minimal-ui">
        <meta name="theme-color" content="#352384" />
        <script type="text/javascript">
@@ -96,7 +96,7 @@
                 </div>
               </div>
               <div id="content-c321919" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="teal-button">APPLY $50 LYFT CREDIT</a> </div>
               </div>
             </div>
           </div>
