--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321931" class="csc-default skin-mb-l">
-                <h3 class="align-center">Lyft offers rides that fit your needs and budget</h3>
+                <h3 class="align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
               </div>
               <div id="content-c321939" class="csc-default">
                 <div class="row flex skin-mb-s">
@@ -72,7 +72,7 @@
                     </div>
                     <div id="content-c321935" class="csc-default">
                       <h4 class="align-center bold">Lyft</h4>
-                      <p class="align-center">Personal on-demand ride that seats up to 4 passengers.</p>
+                      <p class="align-center">Aliquam lobortis, diam sit amet pharetra condimentum.</p>
                     </div>
                   </div>
                   <div class="col col-sm-4">
@@ -81,7 +81,7 @@
                     </div>
                     <div id="content-c321937" class="csc-default">
                       <h4 class="align-center bold">Lyft Line</h4>
-                      <p class="align-center">Ridesharing connects you with other passengers along your route. You pay a discounted price when you share a ride.</p>
+                      <p class="align-center">Odio ligula efficitur tellus, ac malesuada nulla enim quis sapien.</p>
                     </div>
                   </div>
                   <div class="col col-sm-4">
@@ -90,13 +90,13 @@
                     </div>
                     <div id="content-c321938" class="csc-default">
                       <h4 class="align-center bold">Lyft Plus</h4>
-                      <p class="align-center">Request a larger vehicle that seats up to 6 passengers. Rates will be a bit higher than regular Lyft and Lyft Line.</p>
+                      <p class="align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div id="content-c321919" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="teal-button">APPLY $50 LYFT CREDIT</a> </div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="teal-button">APPLY $10 POSTMATES CREDIT</a> </div>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321831" class="csc-default skin-mb-l">
-                <h3 class="align-center">How to get your Lyft credit</h3>
+                <h3 class="align-center">How to get your Postmates credit</h3>
                 <h4 class="align-center">If you don't already have the Lyft app installed, download and install for <a href="https://play.google.com/store/apps/details?id=me.lyft.android" target="_blank">Android</a> or <a href="https://itunes.apple.com/us/app/lyft/id529379082" target="_blank">iPhone</a>.</h4>
               </div>
               <div id="content-c321819" class="csc-default">
