--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Lyft Standard" title="Lyft Standard"></a> </div>
                     </div>
                     <div id="content-c321935" class="csc-default">
-                      <h4 class="align-center bold">Lyft</h4>
+                      <h4 class="align-center bold">Postmates</h4>
                       <p class="align-center">Aliquam lobortis, diam sit amet pharetra condimentum.</p>
                     </div>
                   </div>
@@ -80,7 +80,7 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/line-icon.png" data-in-lg-src="images/line-icon.png" data-in-sm-src="images/line-icon.png" data-in-md-src="images/line-icon.png" data-in-xs-src="images/line-icon.png" data-in-xxs-src="images/line-icon.png" data-in-xl-src="images/line-icon.png" class="rimg" alt="Lyft Line" title="Lyft Line"></a> </div>
                     </div>
                     <div id="content-c321937" class="csc-default">
-                      <h4 class="align-center bold">Lyft Line</h4>
+                      <h4 class="align-center bold">Postmates</h4>
                       <p class="align-center">Odio ligula efficitur tellus, ac malesuada nulla enim quis sapien.</p>
                     </div>
                   </div>
@@ -89,7 +89,7 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/plus-icon.png" data-in-lg-src="images/plus-icon.png" data-in-sm-src="images/plus-icon.png" data-in-md-src="images/plus-icon.png" data-in-xs-src="images/plus-icon.png" data-in-xxs-src="images/plus-icon.png" data-in-xl-src="images/plus-icon.png" class="rimg" alt="Lyft Plus" title="Lyft Plus"></a> </div>
                     </div>
                     <div id="content-c321938" class="csc-default">
-                      <h4 class="align-center bold">Lyft Plus</h4>
+                      <h4 class="align-center bold">Postmates</h4>
                       <p class="align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                   </div>
