--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <title>Enter XXXXXXXX - Postmates Promo Code - Get $10 free towards your first food delivery</title>
        <meta name="description" content="Postmates promo codes worth $10 off your first food delivery">
        <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1.0, user-scalable=0, minimal-ui">
-       <meta name="theme-color" content="#352384" />
+       <meta name="theme-color" content="#FFDF18" />
        <script type="text/javascript">
 		  function copyToClipboard(element) {
   			var $temp = $("<input>");
@@ -133,13 +133,13 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-lyftdojo.jpg" data-in-lg-src="images/enter-code-snip-lyftdojo.jpg" data-in-sm-src="images/enter-code-snip-lyftdojo.jpg" data-in-md-src="images/enter-code-snip-lyftdojo.jpg" data-in-xs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xxs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xl-src="images/enter-code-snip-lyftdojo.jpg" class="rimg" alt="Enter promo code LYFTDOJO" title="Enter promo code LYFTDOJO"> </div>
                     </div>
                     <div id="content-c321838" class="csc-default">
-                      <p class="align-center">Paste or enter promo code <b>LYFTDOJO</b> and press "Apply" for up to $50 in Lyft credit. Amount varies based on your city.</p>
+                      <p class="align-center">Paste or enter promo code <b>XXXXXX</b> and press "Apply" for up to $10 in Postmates credit. Amount varies based on your city.</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div id="content-c325519" class="csc-default">
-                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="pink-button">APPLY $50 LYFT CREDIT</a> </div>
+                <div class="align-center"> <a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank" class="teal-button">APPLY $10 POSTMATES CREDIT</a> </div>
               </div>
             </div>
           </div>
