--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         
         <!-- FOOTER MODULE -->
         
-        <div id="footer" class="section faded-teal faded-opaque skin-inverse align-center" style="background-color: #352384">
+        <div id="footer" class="section faded-teal faded-opaque skin-inverse align-center" style="background-color:#FFDF18">
           <div class="container">
             <div class="section-content">
               <div id="content-c321917" class="csc-default skin-padding-xl">
