--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         
-        <!-- RIDE TYPES MODULE -->
+        <!-- DELIVERY TYPES MODULE -->
         <div id="ride-types" class="section faded-gray-lighter faded-opaque">
           <div class="container">
             <div class="section-content">
@@ -71,8 +71,8 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Lyft Standard" title="Lyft Standard"></a> </div>
                     </div>
                     <div id="content-c321935" class="csc-default">
-                      <h4 class="align-center bold">Postmates</h4>
-                      <p class="align-center">Aliquam lobortis, diam sit amet pharetra condimentum.</p>
+                      <h4 class="align-center bold">Postmates Unlimited</h4>
+                      <p class="align-center">As an Unlimited member, you get free delivery on every order over $12, every single time.</p>
                     </div>
                   </div>
                   <div class="col col-sm-4">
