--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/line-icon.png" data-in-lg-src="images/line-icon.png" data-in-sm-src="images/line-icon.png" data-in-md-src="images/line-icon.png" data-in-xs-src="images/line-icon.png" data-in-xxs-src="images/line-icon.png" data-in-xl-src="images/line-icon.png" class="rimg" alt="Lyft Line" title="Lyft Line"></a> </div>
                     </div>
                     <div id="content-c321937" class="csc-default">
-                      <h4 class="align-center bold">Postmates</h4>
-                      <p class="align-center">Odio ligula efficitur tellus, ac malesuada nulla enim quis sapien.</p>
+                      <h4 class="align-center bold">Order local</h4>
+                      <p class="align-center">Order from restaurants near you; whenever and whatever you want.</p>
                     </div>
                   </div>
                   <div class="col col-sm-4">
