--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321931" class="csc-default skin-mb-l">
-                <h3 class="align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+                <h3 class="align-center">Whatever your cravings may be, Postmates will help satisfy them!</h3>
               </div>
               <div id="content-c321939" class="csc-default">
                 <div class="row flex skin-mb-s">
