--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="row flex skin-mb-s">
                   <div class="col col-sm-4">
                     <div id="content-c321934" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Lyft Standard" title="Lyft Standard"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Postmates Unlimited membership" title="Postmates Unlimited membership"></a> </div>
                     </div>
                     <div id="content-c321935" class="csc-default">
                       <h4 class="align-center bold">Postmates Unlimited membership</h4>
@@ -77,7 +77,7 @@
                   </div>
                   <div class="col col-sm-4">
                     <div id="content-c321932" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/line-icon.png" data-in-lg-src="images/line-icon.png" data-in-sm-src="images/line-icon.png" data-in-md-src="images/line-icon.png" data-in-xs-src="images/line-icon.png" data-in-xxs-src="images/line-icon.png" data-in-xl-src="images/line-icon.png" class="rimg" alt="Lyft Line" title="Lyft Line"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/postmates-delivery-icon.png" data-in-lg-src="images/postmates-delivery-icon.png" data-in-sm-src="images/postmates-delivery-icon.png" data-in-md-src="images/postmates-delivery-icon.png" data-in-xs-src="images/postmates-delivery-icon.png" data-in-xxs-src="images/postmates-delivery-icon.png" data-in-xl-src="images/postmates-delivery-icon.png" class="rimg" alt="Food delivered to your door" title="Food delivered to your door"></a> </div>
                     </div>
                     <div id="content-c321937" class="csc-default">
                       <h4 class="align-center bold">Food delivered to your door</h4>
@@ -86,7 +86,7 @@
                   </div>
                   <div class="col col-sm-4">
                     <div id="content-c321933" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/plus-icon.png" data-in-lg-src="images/plus-icon.png" data-in-sm-src="images/plus-icon.png" data-in-md-src="images/plus-icon.png" data-in-xs-src="images/plus-icon.png" data-in-xxs-src="images/plus-icon.png" data-in-xl-src="images/plus-icon.png" class="rimg" alt="Lyft Plus" title="Lyft Plus"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/postmates-pickup-icon.png" data-in-lg-src="images/postmates-pickup-icon.png" data-in-sm-src="images/postmates-pickup-icon.png" data-in-md-src="images/postmates-pickup-icon.png" data-in-xs-src="images/postmates-pickup-icon.png" data-in-xxs-src="images/postmates-pickup-icon.png" data-in-xl-src="images/postmates-pickup-icon.png" class="rimg" alt="Order for easy pickup" title="Order for easy pickup"></a> </div>
                     </div>
                     <div id="content-c321938" class="csc-default">
                       <h4 class="align-center bold">Order for easy pickup</h4>
