--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="row flex skin-mb-s">
                   <div class="col col-sm-4">
                     <div id="content-c321934" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/lyft-icon.png" data-in-lg-src="images/lyft-icon.png" data-in-sm-src="images/lyft-icon.png" data-in-md-src="images/lyft-icon.png" data-in-xs-src="images/lyft-icon.png" data-in-xxs-src="images/lyft-icon.png" data-in-xl-src="images/lyft-icon.png" class="rimg" alt="Postmates Unlimited membership" title="Postmates Unlimited membership"></a> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><a onclick="goog_report_conversion('http://postmates.promo')" href="https://www.lyft.com/invite/LYFTDOJO" target="_blank"><img src="images/postmates-unlimited-icon.png" data-in-lg-src="images/postmates-unlimited-icon.png" data-in-sm-src="images/postmates-unlimited-icon.png" data-in-md-src="images/postmates-unlimited-icon.png" data-in-xs-src="images/postmates-unlimited-icon.png" data-in-xxs-src="images/postmates-unlimited-icon.png" data-in-xl-src="images/postmates-unlimited-icon.png" class="rimg" alt="Postmates Unlimited membership" title="Postmates Unlimited membership"></a> </div>
                     </div>
                     <div id="content-c321935" class="csc-default">
                       <h4 class="align-center bold">Postmates Unlimited membership</h4>
