--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="main-content"> 
         
         <!-- HERO BANNER MODULE -->
-        <div id="content-c321915" class="section faded-teal" style="background-image: url('images/hero-01.jpg');"> <img src="images/hero-01.jpg" data-in-lg-src="images/hero-01.jpg" data-in-sm-src="images/hero-01.jpg" data-in-md-src="images/hero-01.jpg" data-in-xs-src="images/hero-01.jpg" data-in-xxs-src="images/hero-01.jpg" data-in-xl-src="images/hero-01.jpg" class="rimg section-image" data-remote=".section">
+        <div id="content-c321915" class="section faded-teal" style="background-image: url('images/postmates-hero.jpg');"> <img src="images/postmates-hero.jpg" data-in-lg-src="images/postmates-hero.jpg" data-in-sm-src="images/postmates-hero.jpg" data-in-md-src="images/postmates-hero.jpg" data-in-xs-src="images/postmates-hero.jpg" data-in-xxs-src="images/postmates-hero.jpg" data-in-xl-src="images/postmates-hero.jpg" class="rimg section-image" data-remote=".section">
           <div class="container">
             <div class="section-content">
               <div id="content-c321913" class="csc-default skin-padding-m">
