--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-01.jpg" data-in-lg-src="images/enter-code-snip-01.jpg" data-in-sm-src="images/enter-code-snip-01.jpg" data-in-md-src="images/enter-code-snip-01.jpg" data-in-xs-src="images/enter-code-snip-01.jpg" data-in-xxs-src="images/enter-code-snip-01.jpg" data-in-xl-src="images/enter-code-snip-01.jpg" class="rimg" alt="Select Promos from the app menu" title="Select Promos from the app menu"> </div>
                     </div>
                     <div id="content-c321835" class="csc-default">
-                      <p class="align-center">Select "Promos" from the menu in your Lyft app</p>
+		       <p class="align-center"><strong>Adding promos to account</strong></p>
+		       <ul>
+			  <li>Tap your profile icon</li>
+			  <li>Select <strong>Promos and Credits</strong></li>
+			  <li>Enter code at the top of the page</li>
+		       </ul>
                     </div>
                   </div>
                   <div class="col col-sm-4">
@@ -133,7 +138,12 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-lyftdojo.jpg" data-in-lg-src="images/enter-code-snip-lyftdojo.jpg" data-in-sm-src="images/enter-code-snip-lyftdojo.jpg" data-in-md-src="images/enter-code-snip-lyftdojo.jpg" data-in-xs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xxs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xl-src="images/enter-code-snip-lyftdojo.jpg" class="rimg" alt="Enter promo code LYFTDOJO" title="Enter promo code LYFTDOJO"> </div>
                     </div>
                     <div id="content-c321838" class="csc-default">
-                      <p class="align-center">Paste or enter promo code <b>XXXXXX</b> and press "Apply" for up to $10 in Postmates credit. Amount varies based on your city.</p>
+                      <p class="align-center"><strong>Adding promos at checkout</strong></p>
+		       <ul>
+			  <li>Add items to your cart</li>
+			  <li>Select <strong>View Cart</strong></li>
+			  <li>Enter promo where it says <strong>Enter promo code</strong></li>
+		       </ul>
                     </div>
                   </div>
                 </div>
