--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <div class="container">
             <div class="section-content">
               <div id="content-c321917" class="csc-default skin-padding-xl">
-                <p class="align-center">© 2020 All Right Reserved. This website not officially affiliated with Postmates in any way. </p>
+                <p class="align-center">© 2020 All Right Reserved. This website is not officially affiliated with Postmates in any way.</p>
               </div>
             </div>
           </div>
